simplify the qr code
