# src/main/kotlin/com/wutsi/platform/qr/delegate/PaymentDelegate.kt
@@ -1,45 +1,24 @@
 package com.wutsi.platform.qr.`delegate`
 
-import com.auth0.jwt.JWT
-import com.auth0.jwt.algorithms.Algorithm
 import com.wutsi.platform.qr.dto.CreatePaymentQRCodeRequest
 import com.wutsi.platform.qr.dto.CreatePaymentQRCodeResponse
-import com.wutsi.platform.qr.service.RSAKeyProviderImpl
-import com.wutsi.platform.qr.service.TenantProvider
 import org.springframework.stereotype.Service
-import java.util.Date
+import java.time.Clock
 
 @Service
 public class PaymentDelegate(
-    private val keyProvider: RSAKeyProviderImpl,
-    private val tenantProvider: TenantProvider
+    private val clock: Clock,
 ) {
     companion object {
         const val TTL = 300 // 300 seconds
     }
 
     public fun invoke(request: CreatePaymentQRCodeRequest): CreatePaymentQRCodeResponse {
-        val now = System.currentTimeMillis()
-
-        val builder = JWT.create()
-            .withSubject(request.merchantId.toString())
-            .withIssuedAt(Date(now))
-            .withJWTId(keyProvider.privateKeyId)
-            .withClaim("currency", request.currency)
-            .withClaim("amount", request.amount)
-            .withClaim("tenant_id", tenantProvider.id())
-            .withClaim("entity_type", "PAYMENT")
-            .withClaim("reference_id", request.referenceId)
-            .withExpiresAt(Date(now + 1000 * (request.timeToLive ?: TTL)))
-
-        if (!request.invoiceId.isNullOrBlank())
-            builder.withClaim("invoice_id", request.invoiceId)
-
-        if (!request.description.isNullOrBlank())
-            builder.withClaim("description", request.description)
-
+        val now = clock.millis()
+        val expiry = now + (request.timeToLive?.let { it } ?: TTL) * 1000
+        val amount = (100.0 * request.amount).toLong()
         return CreatePaymentQRCodeResponse(
-            token = builder.sign(Algorithm.RSA256(keyProvider)),
+            token = "payment:${request.merchantId}:${request.referenceId}:$amount:${request.currency}:$expiry"
         )
     }
 }
