# src/main/kotlin/com/wutsi/platform/qr/dto/GetKeyResponse.kt
@@ -1,5 +1,0 @@
-package com.wutsi.platform.qr.dto
-
-public data class GetKeyResponse(
-    public val key: Key = Key()
-)
