# src/main/kotlin/com/wutsi/platform/qr/dto/Key.kt
@@ -1,8 +1,0 @@
-package com.wutsi.platform.qr.dto
-
-import kotlin.String
-
-public data class Key(
-    public val algorithm: String = "",
-    public val content: String = ""
-)
